# the_rental_farm

./: README.md  docker-compose.yml
backend/: .env.example  .env.sample  fix_permissions.py  requirements.txt
backend/my_project/: auth_utils.py  crud.py  database.py  email_service.py  main.py  models.py  payment_service.py  pyproject.toml  scheduler.py  schemas.py  seed.py  test_payment_integration.py  trending.py
backend/my_project/alembic/: env.py
backend/my_project/alembic/versions/: 0aafdf00f8cc_merge_heads.py  590bbb52dba4_merging_two_heads.py  5df00cbf609c_drop_unused_tree_and_order_columns.py  6c4c47b37e26_drop_date_columns_from_orders.py  7e8f9a0b1c2d_add_payment_fields_to_orders.py  9b477a656f63_add_lat_lng_to_trees.py  a1b2c3d4e5f6_add_image_urls_to_trees.py  a2b3c4d5e6f7_progressive_profiling.py  b2c3d4e5f6a7_add_season_and_tree_detail_columns.py  b8d2b7420dc9_add_owner_ratings_table.py  c3d4e5f6a7b8_add_age_and_previous_year_yield_to_trees.py  d1e2f3a4b5c6_add_google_sso_fields_to_users.py  f1a2b3c4d5e6_order_tracking_system.py
backend/my_project/routes/: addresses.py  auth.py  availability.py  images.py  notifications.py  orders.py  owner.py  ratings.py  trees.py  updates.py  webhooks.py  wishlist.py
frontend/app/: .env.example  index.html  package-lock.json  package.json
frontend/app/src/: App.css  App.jsx  index.css
frontend/app/src/components/: AddressManager.jsx  AddressPickerCheckout.jsx  BookingModal.jsx  CartDrawer.jsx  CheckoutModal.jsx  DateRangePicker.jsx  Footer.jsx  ImageUploader.jsx  LocationPicker.jsx  MapplsMap.jsx  Navbar.jsx  (+9 more)
(+21 files in other folders)
